--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,84 @@
-html, 
+/* Reset & Base styles
+   ================= */
+html,
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+/* Typography
+   ========= */
+h1,
+h2 {
+  margin: 0;
+}
+
+/* Layout & Components
+   ================= */
+main {
+  margin: 0 1.25em;
+}
+
+/* Header Component */
+#header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1.25em 1.25em;
+}
+
+/* Navigation */
+#nav {
+  display: flex;
+  gap: 1em;
+  font-size: 0.8rem;
+}
+
+#nav a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: inherit;
+  font-weight: 900;
+}
+
+/* Logo Component */
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.logo img {
+  display: inline-block;
+  width: 20px;
+}
+
+/* Hero Section */
+#hero {
+  background: url("/images/hero.jpg");
+  background-size: cover;
+  color: whitesmoke;
+  text-shadow: 0 1px 2px black;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 1em;
+}
+
+/* Blog Posts Section */
+.blog-images {
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  margin-bottom: 1em;
+}
+
+/* Media Queries
+   ============ */
+@media (min-width: 768px) {
+  .hero-content {
+    width: 50%;
+  }
 }
