--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,20 @@ main {
   flex-direction: column;
   justify-content: flex-end;
   padding: 1em;
+  margin-bottom: 1em;
 }
 
 /* Blog Posts Section */
+
+@media (min-width: 768px) {
+  #posts {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 1em;
+    gap: 1em;
+  }
+}
+
 .blog-images {
   width: 100%;
   height: 200px;
